# json-autotype

./: .coveralls.yml  .dockerignore  .ghci  .gitignore  .gitlab-ci.yml  .travis.yml  CLI.hs  CommonCLI.hs  Dockerfile  GenerateJSONParser.hs  GenerateTestJSON.hs  LICENSE  README.md  TODO.md  Test.hs  TestQC.hs  aeson-autotype.cabal  cabal.project  changelog  changelog.md  clean  clean.sh  json-autotype.cabal  json-autotype.sublime-workspace  pier.yaml  stack.yaml  testElm.sh  testPurescript.sh  testit.sh
.circleci/: config.yml
Data/Aeson/AutoType/: Alternative.hs  CodeGen.hs  Extract.hs  Format.hs  Pretty.hs  Split.hs  Test.hs  Type.hs  Util.hs
Data/Aeson/AutoType/CodeGen/: Common.hs  Elm.hs  ElmFormat.hs  FormatHaskell.hs  Generic.hs  Haskell.hs  HaskellFormat.hs  PureScript.hs  PureScriptFormat.hs
Data/Aeson/AutoType/Plugin/: Loader.hs  PluginLoader.hs  Subtype.hs
Data/Aeson/AutoType/Plugin/API/: Subtype.hs
ci/: cabal-common.sh  common.sh  deploy.sh  new-cabal-build.sh  old-cabal-build.sh  package-test.sh  release.sh  stack-build.sh
doc/: .gitignore  demoProposal.tex  hcar.tex  paper.tex  scienceAbstract.md
doc/hcar/: Automatictypeinferencefro-MA.tex
examples/: .gitignore  moeDict.failed  union.json
examples/json-schema/: BasicSchema.json  fstab-schema.fail  fstab-schema.json  fstab.fail
examples/transcriptic/: LICENSE
examples/transcriptic/protocol/: oligo.json  pcr.failed
json-alt/: LICENSE  README.md  changelog.md  json-alt.cabal  package.yaml
json-autotype/: .gitignore  NOTES.md  README.md  TODO.md  build.sh  changelog.md  clean.sh  json-autotype.cabal  package.yaml
json-autotype/Data/Aeson/AutoType/: Format.hs  Split.hs  Type.hs  Util.hs
json-autotype/Data/Aeson/AutoType/Plugin/: Loader.hs
json-autotype/app/: GenerateJSONParser.hs
json-autotype/common/: CommonCLI.hs
json-autotype/doc/: .gitignore  scienceAbstract.md
json-autotype/examples/: Colors.hs  MoeDict.hs  Union.hs  colors.json  numeric-key.json
json-autotype/examples/json-schema/: BasicSchema.json  Fstab-schema.hs  Fstab.hs  Product-schema.hs  Product.hs  product.json
json-autotype/examples/transcriptic/: LICENSE
json-autotype/examples/transcriptic/instruction/: Instructions.hs  instructions.json
json-autotype/examples/transcriptic/protocol/: Od600.hs  Oligo.hs  Pcr.hs  od600.json
json-autotype/run-haskell-module/: RunHaskellModule.hs
json-autotype/src/Data/Aeson/AutoType/: CodeGen.hs  Extract.hs  Nested.hs  Pretty.hs  Split.hs  Test.hs  Type.hs  Util.hs
json-autotype/src/Data/Aeson/AutoType/CodeGen/: Clang.hs  ClangFormat.hs  Elixir.hs  ElixirFormat.hs  Elm.hs  Haskell.hs  HaskellFormat.hs
json-autotype/src/Data/Aeson/AutoType/Plugin/: Subtype.hs
json-autotype/test/: GenerateTestJSON.hs  TestExamples.hs  events.json  googlemaps.bad_json
json-autotype/test/qc/: TestQC.hs
run-haskell-module/: README.md  changelog.md  package.yaml  run-haskell-module.cabal
run-haskell-module/src/Language/Haskell/: RunHaskellModule.hs
test/: README.md  TestExamples.hs  TestQC.hs  customerform.json  events.auto_error  flickr.failed  googlemaps.failed  jenkins.failed  preprocessor.hs  productsdb.json  twitterapi.bad_json
