-- Build information for the package.
name:                run-haskell-module
version:             0.0.1
synopsis:            Running newly generated Haskell source module.
description:         To make sure freshly generated code runs,
                     we need to make it run in Stack/Cabal/GHC environment.
homepage:            https://github.com/mgajda/json-autotype
license:             BSD3
license-file:        LICENSE
stability:           stable
author:              Michal J. Gajda, Dmitrii Krylov
maintainer:          simons@cryp.to
                     mjgajda@gmail.com
copyright:           Copyright by Michal J. Gajda '2014-'2020
category:            Data, Tools
build-type:          Simple
extra-source-files:  README.md changelog.md
cabal-version:       >=1.10
bug-reports:         https://github.com/mgajda/json-autotype/issues
tested-with:         GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.2
                   , GHC==8.8.2

source-repository head
  type:     git
  location: https://github.com/mgajda/json-autotype.git

library
  exposed-modules:     Language.Haskell.RunHaskellModule
  hs-source-dirs:      src
  build-depends:       base                 >=4.3  && <5,
                       data-default         >=0.7  && <0.8,
                       filepath             >=1.3  && <1.5,
                       process              >=1.1  && <1.7
  default-language:    Haskell2010
